--- a/1.ipynb
+++ b/1.ipynb
@@ -6,7 +6,7 @@
       "name": "1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOpjpKEXCYEjxu6LPpyuKoS",
+      "authorship_tag": "ABX9TyPf2wUQ4GkWZn6Vn11d/Sld",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,7 +227,8 @@
         "id": "HcfovgHfz3L7"
       },
       "source": [
-        "dls = TextDataLoaders.from_folder(untar_data(URLs.IMDB), valid='test')\n",
+        "dls = TextDataLoaders.from_folder(untar_data(URLs.IMDB), \n",
+        "                                  valid='test',bs=16)\n",
         "learn = text_classifier_learner(dls, AWD_LSTM, drop_mult=0.5,metrics=accuracy)\n",
         "learn.fine_tune(4,1e-2)"
       ],
@@ -238,6 +239,78 @@
       "cell_type": "code",
       "metadata": {
         "id": "DtZmzTyA0Rku"
+      },
+      "source": [
+        "#learn.predict(\"That movie sucked.\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FmWb2gAj78Hh"
+      },
+      "source": [
+        "from fastai.tabular.all import *\n",
+        "path = untar_data(URLs.ADULT_SAMPLE)\n",
+        "\n",
+        "dls = TabularDataLoaders.from_csv(path/'adult.csv',\n",
+        "                                  path=path,y_names=\"salary\",\n",
+        "                                  cat_names = ['workclass','education',\n",
+        "                                               'marital-status','occupation','relationship','race'],\n",
+        "                                  cont_names =['age','fnlwgt','education-num'],\n",
+        "                                  procs=[Categorify,FillMissing, Normalize])\n",
+        "\n",
+        "learn=tabular_learner(dls,metrics=accuracy)\n",
+        "\n",
+        "\n",
+        "                                "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q-StRLfp85xV"
+      },
+      "source": [
+        "learn.fit_one_cycle(3)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5pMk6R4M9SZY"
+      },
+      "source": [
+        "from fastai.collab import *\n",
+        "path = untar_data(URLs.ML_SAMPLE)\n",
+        "dls = CollabDataLoaders.from_csv(path/'ratings.csv')\n",
+        "learn = collab_learner(dls,y_range=(0.5,5.5))\n",
+        "learn.fine_tune(10)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Iy1UHE-1_W08"
+      },
+      "source": [
+        "learn.show_results()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ds7gU2KY_ihT"
       },
       "source": [
         ""
